--- a/build.gradle
+++ b/build.gradle
@@ -169,9 +169,9 @@ dependencies {
     // at runtime, use the full JEI jar for Forge
     //runtimeOnly(fg.deobf("mezz.jei:jei-1.19.2-forge:11.6.0.1015"))
 
-    //compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-77:api")
+    compileOnly( fg.deobf("vazkii.patchouli:Patchouli:1.19.2-77:api"))
 // https://mvnrepository.com/artifact/vazkii.patchouli/Patchouli
-    runtimeOnly( fg.deobf('vazkii.patchouli:Patchouli:1.19.2-77'))
+    //runtimeOnly( fg.deobf('vazkii.patchouli:Patchouli:1.19.2-77'))
 
 }
 
