--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    repositories {
-
+    repositories{
+        mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
@@ -19,8 +19,8 @@ plugins {
 apply plugin: 'org.spongepowered.mixin'
 //apply plugin: 'com.diffplug.eclipse.apt' // if you are using Eclipse, add this line
 
-version = '1.19.2-5.1.0'
-group = 'com.yourname.modid' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "1.19.2-5.1.0-patchouli"
+group = 'com.iwaliner.${mod_id}' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = mod_id
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
@@ -71,6 +71,11 @@ minecraft {
                     source sourceSets.main
                 }
             }
+
+            // help mixin remap itself, need to re-run genIntellijRuns and refresh gradle project
+            // https://github.com/SpongePowered/Mixin/issues/462#issuecomment-791370319
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${project.projectDir}/build/createSrgToMcp/output.srg"
         }
 
         server {
@@ -207,11 +212,11 @@ jar {
     manifest {
         attributes([
                 "Specification-Title"     : mod_id,
-                "Specification-Vendor"    : "urushisareus",
+                "Specification-Vendor"    : author_name,
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
-                "Implementation-Vendor"   : "urushisareus",
+                "Implementation-Vendor"   : author_name,
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
