--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,13 @@
 pluginManagement {
     repositories {
         gradlePluginPortal()
-        maven { url = 'https://maven.minecraftforge.net/' }
+        maven {
+            name = 'MinecraftForge'
+            url = 'https://maven.minecraftforge.net/'
+        }
+        maven {
+            url "https://repo.spongepowered.org/repository/maven-public/"
+        }
     }
 }
+
